--- a/css/style.css
+++ b/css/style.css
@@ -50,14 +50,15 @@ main {
 }
 
 .navbar-container-s {
+    display: flex;
     width: 100%;
     max-width: 1400px;
     height: 56px;
     margin: 0 auto;
-    display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 
 header li a {
     color: white;
@@ -82,6 +83,26 @@ header li a {
     color: #fff;
     cursor: pointer;
 }
+
+
+.btn-nav-contato {
+        background-color: var(--colot-button-primary); /* Cor de destaque (Laranja/Ouro) */
+        color: white !important;
+        padding: 0.2rem;
+        border-radius: 0.5rem;        /* Bordas levemente arredondadas */
+        font-weight: bold;
+        font-size: 1rem;
+        text-decoration: none;
+        transition: all 0.3s ease;
+        border: 2px solid transparent;
+    }
+
+    .btn-nav-contato:hover {
+        background-color: transparent;
+        border-color: #ff9807;
+        color: #ff9807 !important;
+        transform: scale(1.05); /* Dá um leve aumento */
+    }
 
 @media (max-width: 768px) {
     .navbar-toggle-s {
@@ -117,10 +138,18 @@ header li a {
         opacity: 0;
         transition: opacity 0.4s ease;
     }
-
-    
+ 
     .navbar-menu-s.active li {
         opacity: 1;
+    }
+
+    .nav-btn-container {
+        margin: 1rem 0; 
+        width: 80%;    
+    }
+
+    .btn-nav-contato {
+        text-align: center;
     }
 }
 
