--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,18 @@ main {
     z-index: 1000;
 }
 
+.navbar-brand-s {
+    order: 1;
+}
+
 .navbar-brand-s img {
     color: #fff;
+}
+
+.nav-btn-container{
+    order: 2;
+    margin-left: auto;
+    margin-right: 1rem;
 }
 
 .navbar-container-s {
@@ -65,7 +75,6 @@ main {
     align-items: center;
     justify-content: space-between;
 }
-
 
 header li a {
     color: white;
@@ -80,6 +89,7 @@ header li a {
     gap: 1rem;
     list-style: none;
     margin: 10px;
+    order: 4;
 }
 
 .navbar-toggle-s {
@@ -89,32 +99,40 @@ header li a {
     font-size: 1.5rem;
     color: #fff;
     cursor: pointer;
+    order: 3;
 }
 
-
 .btn-nav-contato {
-        background-color: var(--colot-button-primary); /* Cor de destaque (Laranja/Ouro) */
-        color: white !important;
-        padding: 0.2rem;
-        border-radius: 0.5rem;        /* Bordas levemente arredondadas */
-        font-weight: bold;
-        font-size: 1rem;
-        text-decoration: none;
-        transition: all 0.3s ease;
-        border: 2px solid transparent;
-    }
-
-    .btn-nav-contato:hover {
-        background-color: transparent;
-        border-color: #ff9807;
-        color: #ff9807 !important;
-        transform: scale(1.05); /* Dá um leve aumento */
-    }
+    background-color: var(--colot-button-primary); /* Cor de destaque (Laranja/Ouro) */
+    color: white !important;
+    padding: 0.2rem;
+    border-radius: 0.5rem;        /* Bordas levemente arredondadas */
+    font-weight: bold;
+    font-size: 1rem;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    border: 2px solid transparent;
+}
+.btn-nav-contato:hover {
+    background-color: transparent;
+    border-color: #ff9807;
+    color: #ff9807 !important;
+    transform: scale(1.05); /* Dá um leve aumento */
+}
 
 @media (max-width: 768px) {
     .navbar-toggle-s {
         display: block;
+        order: 3;
+        margin-left: 10px;
     }
+
+    .navbar-container-s {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
 
     .navbar-menu-s {
         position: absolute;
@@ -151,12 +169,15 @@ header li a {
     }
 
     .nav-btn-container {
-        margin: 1rem 0; 
-        width: 80%;    
+        display: block;
+        margin: 0;
+        order: 2;
     }
 
     .btn-nav-contato {
         text-align: center;
+        padding: 0.5rem 0.8rem;
+        font-size: 0.85rem;
     }
 }
 
