--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,22 @@
     --accent-soft: #92c58b;
     --surface-default: #f1ead3;
     --text-default: #343a40;
+    --border-default: #ff9807;
+
+    --height-nav-bar: 92px;
 }
 
 body {
-    margin-top: 76px;
+    margin-top: var(--height-nav-bar);
 }
 
 a {
     text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: white;
 }
 
 ul,
@@ -29,18 +37,65 @@ main {
     justify-items: center;
 }
 
-.overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(circle, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.548) 80%);
-}
-
-
 .container {
     max-width: 1200px;
 }
 
+/* Hero */
+
+.hero {
+    position: relative;
+    min-height: 80vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: background-image 2.2s ease-in-out;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    color: #ffffff;
+    max-width: 800px;
+    padding: 0 1.5rem;
+}
+
+.hero-content h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.hero-content p {
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+}
+
+.hero-btn {
+    background-color: #f2c94c;
+    padding: 14px 32px;
+    border-radius: 8px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: background .8s ease;
+}
+
+
+.hero-btn:hover {
+    background-color: var(--brand-secondary);
+}
+
+.hero-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #0b4930a9;
+}
 
 /*------------------ Estilos da NavBar ----------------- */
 .navbar-s {
@@ -53,28 +108,18 @@ main {
     z-index: 1000;
 }
 
-.nav-btn-container{
-    margin-left: auto;
-    margin-right: 1rem;
-}
-
 .navbar-container-s {
     display: flex;
     width: 100%;
     max-width: 1200px;
-    height: 56px;
+    height: 72px;
     margin: 0 auto;
     align-items: center;
     justify-content: space-between;
 }
 
 header li a {
-    color: white;
     padding: 10px 10px;
-}
-
-nav a:hover {
-    color: white;
 }
 
 header li a:hover {
@@ -88,10 +133,11 @@ header li a:hover {
 
 .navbar-menu-s {
     display: flex;
-    gap: 1rem;
-    list-style: none;
     margin: 10px;
-    order: 4;
+}
+
+.nav-container-flex {
+    display: flex;
 }
 
 .navbar-toggle-s {
@@ -101,37 +147,36 @@ header li a:hover {
     font-size: 1.5rem;
     color: #fff;
     cursor: pointer;
-    order: 3;
 }
 
 .btn-nav-contato {
-    background-color: var(--colot-button-primary); /* Cor de destaque (Laranja/Ouro) */
-    color: white;
+    background-color: var(--colot-button-primary);
+    /* Cor de destaque (Laranja/Ouro) */
     padding: 0.6rem 1rem;
-    border-radius: 0.5rem;        
+    border-radius: 0.5rem;
     font-weight: bold;
     font-size: 1rem;
     text-decoration: none;
     display: inline-block;
     text-align: center;
-    white-space: nowrap;
     transition: all 0.3s ease;
     border: 2px solid transparent;
 }
+
 .btn-nav-contato:hover {
     border-color: #ff9807;
-    transform: scale(1.05); /* Dá um leve aumento */
+    transform: scale(1.05);
+    /* Dá um leve aumento */
 }
 
 /* --- AJUSTE PARA DISPOSITIVOS MÓVEIS (435px ou menos) --- */
 @media (max-width: 375px) {
     .btn-nav-contato {
-        white-space: normal;    
-        max-width: 100px;       
-        font-size: 0.85rem;     
-        padding: 0.4rem;        
-        line-height: 1.2;       
-        display: flex;          
+        max-width: 100px;
+        font-size: 0.85rem;
+        padding: 0.4rem;
+        line-height: 1.2;
+        display: flex;
         align-items: center;
         justify-content: center;
     }
@@ -140,7 +185,6 @@ header li a:hover {
 @media (max-width: 768px) {
     .navbar-toggle-s {
         display: block;
-        order: 3;
         margin-left: 10px;
     }
 
@@ -153,9 +197,9 @@ header li a:hover {
 
     .navbar-menu-s {
         position: absolute;
-        top: 74px;
+        top: 92px;
         right: 0;
-        background: linear-gradient(0deg, rgb(27, 138, 81), rgb(68, 60, 39));
+        background: var(--brand-primary);
         flex-direction: column;
         width: 40%;
         padding: 0;
@@ -172,6 +216,7 @@ header li a:hover {
         max-width: 500px;
         padding: 0.5rem 0;
         border-radius: 5px;
+        border: 1px solid var(--brand-secondary);
     }
 
     .navbar-menu-s li {
@@ -180,21 +225,15 @@ header li a:hover {
         opacity: 0;
         transition: opacity 0.4s ease;
     }
- 
+
     .navbar-menu-s.active li {
         opacity: 1;
     }
 
-    .nav-btn-container {
-        display: block;
-        margin: 0;
-        order: 2;
-    }
-
     .btn-nav-contato {
         text-align: center;
-        padding: 0.5rem 0.8rem;
-        font-size: 0.85rem;
+        padding: 10px 16px;
+        font-size: 16px;
     }
 }
 
@@ -466,7 +505,7 @@ hr {
     background-size: cover;
 }
 
-.form-image{
+.form-image {
     padding-left: 10px;
     padding-top: 7px;
 }
@@ -782,6 +821,7 @@ hr {
         /* Centraliza o conteúdo verticalmente */
     }
 }
+
 /* -----------------FORMULÁRIO DE CONTATO END -----------------*/
 
 
@@ -895,7 +935,6 @@ footer {
     justify-content: center;
     background-color: var(--color-neutral-0);
     font-size: 0.9rem;
-    /* padding: 0.5rem; */
 }
 
 @media screen and (max-width: 768px) {
@@ -925,119 +964,5 @@ footer {
         font-size: 16px;
     }
 }
+
 /*----------------- Fim do FOOTER NEW -----------------*/
-
-
-/*----------------- SLIDER -----------------*/
-.slider {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-} 
-
-.slider-track {
-    display: flex;
-    height: 100%;
-    transition: transform 0.6s ease-in-out;
-}
-
-.slide {
-    min-width: 100%;
-    height: 100%;
-    position: relative;
-    max-width: 1600px;
-}
-
-.slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.4;
-}
-
-.slide-caption {
-    position: absolute;
-    bottom: 15%;
-    left: 8%;
-    max-width: 600px;
-    color: #ffffff
-}
-
-.slide-caption h1 {
-    font-size: clamp(1.8rem, 4vw, 3rem);
-    margin-bottom: 0.5rem;
-}
-
-.slide-caption p {
-    font-size: 1.1rem;
-    line-height: 1.5;
-}
-
-/* Botões */
-.slider-btn {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    background: none;
-    border: none;
-    color: #fff;
-    font-size: 2rem;
-    cursor: pointer;
-    padding: 0 2vw;
-    opacity: 0.5;
-}
-
-.slider-btn.prev {
-    left: 0;
-}
-
-.slider-btn.next {
-    right: 0;
-}
-
-.slider-btn:hover {
-    opacity: 1; 
-}
-
-/* Ajuste na legenda para telas pequenas */
-@media (max-width: 435px) {
-    .slide-caption {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        left: 15%;           /* Reduz a margem lateral para ganhar espaço */
-        right: 15%;          /* Garante que o texto não sangre para fora */
-        bottom: 10%;        /* Sobe um pouco o texto */
-        max-width: 80%;     /* Permite que o texto ocupe quase toda a largura */
-    }
-
-    .slide-caption h1 {
-        /* Ajusta o tamanho: mínimo 1.4rem, ideal 6vw, máximo 2rem */
-        font-size: clamp(1rem, 6vw, 2rem); 
-        line-height: 1.2;
-        margin-bottom: 0.3rem;
-    }
-
-    .slide-caption p {
-        /* Texto um pouco menor para não poluir a imagem */
-        font-size: 0.6rem;
-        line-height: 1.3;
-        /* Limita a quantidade de linhas visíveis se necessário */
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-    }
-    .carousel-control-prev-icon{
-        height: 1rem;
-        width: 1rem;
-    }
-    .carousel-control-next-icon{
-        height: 1rem;
-        width: 1rem;
-    }
-}
-
-/*----------------- FIM DO SLIDER -----------------*/
