--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ header li a {
 
 header li a:hover {
     color: #ff9807;
-    border-bottom: 1px solid #ff9807;
+    border-bottom: 2px solid #ff9807;
 }
 
 .navbar-brand-s img {
@@ -140,29 +140,19 @@ header li a:hover {
     border-radius: 0.5rem;
     font-weight: bold;
     font-size: 1rem;
-    text-decoration: none;
     display: inline-block;
     text-align: center;
     transition: all 0.3s ease;
-    border: 2px solid transparent;
 }
 
 .btn-nav-contato:hover, .btn-primary-yellow:hover {
-    border-color: #ff9807;
-    transform: scale(1.05);
-    /* Dá um leve aumento */
+    transform: scale(1.1);
 }
 
 /* --- AJUSTE PARA DISPOSITIVOS MÓVEIS (435px ou menos) --- */
-@media (max-width: 375px) {
-    .btn-nav-contato, .btn-primary-yellow {
-        max-width: 100px;
-        font-size: 0.85rem;
-        padding: 0.4rem;
-        line-height: 1.2;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+@media (max-width: 425px) {
+    .btn-nav-contato {
+        display: none;
     }
 }
 
@@ -172,16 +162,9 @@ header li a:hover {
         margin-left: 10px;
     }
 
-    .navbar-container-s {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-
     .navbar-menu-s {
         position: absolute;
-        top: 92px;
+        top: var(--height-nav-bar);
         right: 0;
         background: var(--brand-primary);
         flex-direction: column;
@@ -193,7 +176,6 @@ header li a:hover {
         max-width: 0;
         overflow: hidden;
         transition: max-height 0.5s ease-in-out, padding 0.4s ease;
-        z-index: 100;
     }
 
     .navbar-menu-s.active {
@@ -209,7 +191,6 @@ header li a:hover {
 
     .btn-nav-contato {
         text-align: center;
-        padding: 10px 16px;
         font-size: 16px;
     }
 }
@@ -885,7 +866,6 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
-    list-style: none;
     padding-left: 0;
 }
 
